fixed dark mode issues on select tags

--- a/src/style.css
+++ b/src/style.css
@@ -564,7 +564,7 @@ main h2 {
 .modal form *:not(label) {
 	outline: none;
 	border: none;
-	background-color: transparent;
+	background-color: var(--color-background);
 	border-bottom: 1px solid var(--color-accent-transparent);
 	color: var(--color-text);
 }
